fix(multiplatform): adjust ChooseShare styles and update assets
> This gap seems too large - perhaps the picture needs to be adjusted somehow?

https://www.figma.com/design/zctILurzM32OmUgLay5RpZ/KMP-landing-page-%7C-Kotlinlang-%7C-DSGN-24366?node-id=371-16726&m=dev

--- a/blocks/multiplatform/choose-share/choose-share.module.css
+++ b/blocks/multiplatform/choose-share/choose-share.module.css
@@ -32,7 +32,7 @@
 
         @media (--ktl-ds-more) {
             left: -564px;
-            top: -61px;
+            top: -63px;
         }
 
         @media (--ktl-ds-in) {
